--- a/Wildfire/Views/WildlandInfoView.xaml
+++ b/Wildfire/Views/WildlandInfoView.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <!-- Author:        Jack McNally
      Page Name:     WildlandInfoView
-     Purpose:       wildiland fire interface.
+     Purpose:       wildland fire interface.
 -->
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
